--- a/projects/testgen/mainform.lfm
+++ b/projects/testgen/mainform.lfm
@@ -1,4 +1,4 @@
-object Form1: TForm1
+object SuiteForm: TSuiteForm
   Left = 2101
   Height = 441
   Top = 142
@@ -7,6 +7,7 @@ object Form1: TForm1
   ClientHeight = 421
   ClientWidth = 828
   Menu = MainMainMenu
+  OnCreate = FormCreate
   LCLVersion = '1.6.2.0'
   object MainTreeView: TTreeView
     AnchorSideLeft.Control = Owner
@@ -129,27 +130,243 @@ object Form1: TForm1
       Caption = 'File'
       object NewMenuItem: TMenuItem
         Action = NewAction
+        Bitmap.Data = {
+          36040000424D3604000000000000360000002800000010000000100000000100
+          2000000000000004000064000000640000000000000000000000A9374A00A937
+          4A00A9374A00A9374A00A9374A00A9374A00A9374A00A9374A00A9374A00A937
+          4A00A9374A00A9374A00A9374A00A9374A00A9374A00A9374A00A9374A00A937
+          4A00BE5D6DFFC26574FFC26574FFC26574FFC26574FFC26574FFC26574FFC265
+          74FFC26574FFC26574FFC26574FFC26574FFA9374A00A9374A00A9374A00A937
+          4A00BF5F6FFFF2D9DDFFECC8CEFFE9C0C7FFE7BBC2FFE5B6BEFFE2AEB7FFE0A9
+          B2FFE0A9B2FFE0A9B2FFE1ACB4FFC26574FFA9374A00A9374A00A9374A00A937
+          4A00C16372FFF4DEE2FFEECED3FFECC8CEFFE9C0C7FFE7BBC2FFE5B6BEFFE2AE
+          B7FFE0A9B2FFE0A9B2FFE1ACB4FFC26574FFA9374A00A9374A00A9374A00A937
+          4A00C36776FFF7E7EAFFC46978FFC46978FFC46978FFC46978FFC46978FFC469
+          78FFC46978FFC46978FFE1ACB4FFC26574FFA9374A00A9374A00A9374A00A937
+          4A00C56B7AFFF9EDEFFFF2D9DDFFF0D3D8FFEECED3FFECC8CEFFE9C0C7FFE7BB
+          C2FFE5B6BEFFE2AEB7FFE2AEB7FFC26574FFA9374A00A9374A00A9374A00A937
+          4A00C76F7EFFFCF6F7FFC46978FFC46978FFC46978FFC46978FFC46978FFC469
+          78FFC46978FFC46978FFE4B3BBFFC26574FFA9374A00A9374A00A9374A00A937
+          4A00CA7684FFFEFCFCFFF9EDEFFFF6E4E7FFF2D9DDFFF0D3D8FFEECED3FFECC8
+          CEFFE9C0C7FFE7BBC2FFE6B8C0FFC26574FFA9374A00A9374A00A9374A00A937
+          4A00CC7A87FFFEFCFCFFC46978FFC46978FFC46978FFC46978FFC46978FFC469
+          78FFC46978FFC46978FFE8BEC5FFC26574FFA9374A00A9374A0000FFFCFFA937
+          4A000099E1FF00FFFCFFFEFCFCFF0099E1FF00FFFCFFF5E1E4FFF2D9DDFFF0D3
+          D8FFECC8CEFFEAC3C9FFE9C0C7FFC26574FFA9374A00A9374A000099E1FF00FF
+          FCFF0099E1FF00FFFCFF0099E1FF00FFFCFFC46978FFC46978FFC46978FFC469
+          78FFC46978FFC46978FFEBC6CCFFC26574FFA9374A00A9374A00A9374A000099
+          E1FF00FFFCFF00FFFCFF00FFFCFF0099E1FF0099E1FFFCF6F7FFF9EDEFFFF7E7
+          EAFFF5E1E4FFF1D6DAFFEFD1D6FFC26574FFA9374A00A9374A0000FFFCFF00FF
+          FCFF00FFFCFF00FFFCFF00FFFCFF00FFFCFF00FFFCFFFEFCFCFFFDF9F9FFFBF3
+          F4FFF8EAECFFF5E1E4FFF2D9DDFFC26574FFA9374A00A9374A000099E1FF0099
+          E1FF00FFFCFF00FFFCFF00FFFCFF0099E1FFFEFCFCFFFEFCFCFFFEFCFCFFFEFC
+          FCFFFCF6F7FFF7E7EAFFF5E1E4FFC26574FFA9374A00A9374A00A9374A0000FF
+          FCFF0099E1FF00FFFCFF0099E1FF00FFFCFF0099E1FFCE7E8CFFCE7E8CFFCE7E
+          8CFFCE7E8CFFCE7E8CFFCE7E8CFFC26574FFA9374A00A9374A0000FFFCFF0099
+          E1FFA9374A0000FFFCFF0099E1FFA9374A0000FFFCFFA9374A00A9374A00A937
+          4A00A9374A00A9374A00A9374A00A9374A00A9374A00A9374A00
+        }
       end
       object OpenMenuItem: TMenuItem
         Action = OpenAction
+        Bitmap.Data = {
+          36040000424D3604000000000000360000002800000010000000100000000100
+          20000000000000040000640000006400000000000000000000002C86D8002D88
+          D8F72D87D8F72D88D8F72D88D8F72D88D8F72D88D8F72D88D8F72D88D8F72D88
+          D8F72D88D8F72D87D8F72D88D8F72C86D800FFFFFF00FFFFFF00338ED9FBDCF0
+          FAFF98E1F6FF95E0F6FF92DFF6FF8EDEF5FF89DCF5FF85DAF4FF80D9F4FF7AD7
+          F3FF74D5F3FF70D3F2FFC2EAF8FF3594DAFFFFFFFF00FFFFFF003594DAF7EFFA
+          FEFF93E5F8FF8FE4F8FF89E3F8FF82E1F7FF7ADFF7FF71DEF6FF67DBF5FF5BD8
+          F4FF4DD4F3FF40D1F2FFCAF2FBFF3594DAFFFFFFFF00FFFFFF00369ADAF8F2FA
+          FDFF94E6F8FF92E5F8FF90E5F8FF8BE3F8FF86E2F7FF7FE1F7FF77DEF6FF6CDC
+          F6FF5ED9F4FF4FD5F3FFCCF2FBFF3594DAFFFFFFFF00FFFFFF0036A1DAF9F6FC
+          FEFF94E5F8FF93E5F8FF93E5F8FF91E5F8FF93DBE9FF93D7E3FF93D2DCFF90CE
+          D7FF8CC8CFFF86C1C6FFC9D8D6FF3594DAFFC57444E8CA7F53F137A6DAFAFEFF
+          FFFFF8FDFFFFF6FDFFFFF5FCFFFFF3FCFEFF9AE4F4FF9AE6F7FF9BE6F6FF9DE5
+          F5FF9EE5F5FF9FE5F4FFDAF3F8FF3594DAFFFDF4EEFFCA8054F935ABDAFAE8F6
+          FBFF70BCE7FF55AAE2FF4DA5E0FF91C9EBFFFAF3EFFFFDFEFDFFFFFDFCFFFFFD
+          FCFFFEFDFCFFFEFCFBFFFEFEFDFF3594DAFFEFF2E8FFCE8156FF36AADAF2F1FA
+          FDFF94DEF5FF93DCF4FF64BCE9FF3594DAFF3594DAFF3594DAFF3594DAFF3594
+          DAFF3594DAFF3594DAFF3594DAFF3594DAFFFBF6EFFFCC8355FE35AFDAF0F7FC
+          FEFF8EE4F8FF91DEF5FF9FE0F5FFACE1F6FFCA8452FFFFF7F1FFFFE9D9FFFFEA
+          DBFFFFE9D9FFFFE7D7FFFFE5D2FFFFE2CBFFFFF7F1FFCB8555FE36B3DAF8FDFE
+          FEFFFEFFFFFFFEFEFFFFFDFEFFFFFEFFFFFFE4BA91FFFFF7F0FFFFE7D5FFFDE7
+          D6FFFDE6D4FFFCE4D0FFFBE3CBFFFADCC2FFFEF3E8FFCC8656FE34B4D9D05EC2
+          E1FA60C3E2FA60C3E2FA60C3E2FA5FC3E2FAE4BB91FFFFF7F2FFFEE7D5FFFEE7
+          D5FFFDE5D1FFFAE0CAFFF9DEC4FFF7D9BCFFFDF2E7FFCC8757FEFFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00E4BB92FFFEF7F1FFFCE5D2FFFCE4
+          D1FFFBE2CCFFF9DDC4FFF6D7BBFFF3D1AFFFFAEFE4FFCC8758FEFFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00E4BB92FFFEF6F0FFFCE2CDFFFCE3
+          CDFFFADFC8FFF7D9BCFFF5E9DDFFFAF3EBFFFBF8F3FFCA8353FEFFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00E4BB93FFFEF5EDFFFCDEC5FFFBE0
+          C7FFF9DCC2FFF5D3B4FFFEF9F3FFFAE2C4FFECC193FFC37D4893FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00E5BE96FFFFFFFEFFFDF3E9FFFDF3
+          EAFFFCF2E8FFFAEFE3FFFAF2E7FFEABB88FFCF8555B3B4693D0CFFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00EAC39DFFE6BF96FFE4BB92FFE4BB
+          92FFD1A06CF5D09E6DF6CC965FDAC479427EB2673C09FFFFFF00
+        }
       end
       object SaveMenuItem: TMenuItem
         Action = SaveAction
+        Bitmap.Data = {
+          36040000424D3604000000000000360000002800000010000000100000000100
+          2000000000000004000064000000640000000000000000000000BA6A3600B969
+          35B5B86935EEB76835FFB56835FFB46734FFB26634FFB06533FFAE6433FFAC63
+          32FFAA6232FFA96132FFA86031FFA76031FEA66031F1A86131C4BA6A35DEEBC6
+          ADFFEAC5ADFFFEFBF8FFFEFBF8FFFEFBF8FFFEFBF8FFFEFBF8FFFEFBF8FFFEFB
+          F8FFFEFBF8FFFEFBF8FFFEFBF8FFC89A7CFFC79879FFA76031EDBA6B37FEEDCA
+          B3FFE0A27AFFFEFAF7FF62C088FF62C088FF62C088FF62C088FF62C088FF62C0
+          88FF62C088FF62C088FFFDF9F6FFCA8D65FFC99B7CFFA76031FEBB6C38FFEECC
+          B6FFE1A27AFFFEFAF7FFBFDCC2FFBFDCC2FFBFDCC2FFBFDCC2FFBFDCC2FFBFDC
+          C2FFBFDCC2FFBFDCC2FFFDF9F6FFCD9068FFCC9E81FFA86132FFBB6B38FFEFCE
+          B8FFE1A279FFFEFAF7FF62C088FF62C088FF62C088FF62C088FF62C088FF62C0
+          88FF62C088FF62C088FFFDF9F6FFCF936AFFCEA384FFAA6132FFBA6A36FFEFD0
+          BBFFE2A27AFFFEFBF8FFFEFBF8FFFEFBF8FFFEFBF8FFFEFBF8FFFEFBF8FFFEFB
+          F8FFFEFBF8FFFEFBF8FFFEFBF8FFD3966DFFD2A78AFFAB6232FFBB6A36FFF0D2
+          BEFFE2A37AFFE2A37AFFE1A37AFFE2A37BFFE1A37BFFE0A178FFDE9F77FFDD9F
+          76FFDC9D74FFD99B72FFD89971FFD69970FFD5AB8EFFAD6333FFBB6A36FFF2D5
+          C2FFE3A37AFFE3A37AFFE2A37BFFE2A37BFFE2A47BFFE1A279FFE0A178FFDEA0
+          77FFDE9E75FFDC9D74FFDA9B73FFD99B73FFDAB095FFAF6433FFBB6A36FFF2D8
+          C5FFE3A47BFFE3A37AFFE3A47AFFE2A47BFFE2A37BFFE1A37BFFE1A279FFDFA0
+          77FFDE9F76FFDD9E74FFDB9C72FFDC9D74FFDDB59AFFB16534FFBB6B36FFF4D9
+          C7FFE6A67DFFC88C64FFC98D65FFC98E67FFCB926CFFCB926DFFCA9069FFC88C
+          65FFC88C64FFC88C64FFC88C64FFDA9C74FFE1BA9FFFB36634FFBB6B36FEF4DC
+          C9FFE7A77DFFF9ECE1FFF9ECE1FFF9EDE3FFFCF4EEFFFDFAF7FFFDF7F3FFFAED
+          E5FFF7E7DBFFF7E5D9FFF6E5D8FFDEA077FFE4BEA4FFB46734FFBC6B36FAF5DD
+          CCFFE7A87EFFFAF0E8FFFAF0E8FFC98D66FFFAF0E9FFFDF8F3FFFEFAF8FFFCF4
+          EFFFF9E9DFFFF7E7DBFFF7E5D9FFE0A278FFE7C2A9FFB66835FFBC6B36F0F6DF
+          D0FFE8A87EFFFCF6F1FFFCF6F1FFC88C64FFFAF1E9FFFBF4EEFFFDFAF7FFFDF9
+          F6FFFAF0E8FFF8E8DDFFF7E6DBFFE1A37AFFEFD5C3FFB76935FEBC6B36D8F6DF
+          D1FFE9AA80FFFEFAF6FFFDFAF6FFC88C64FFFBF3EEFFFBF1EAFFFCF6F2FFFEFB
+          F8FFFCF6F1FFF9ECE2FFF8E7DBFFEED0BAFFECD0BDFFBB703EF8BC6B369BF6E0
+          D1FFF7E0D1FFFEFBF8FFFEFBF7FFFDF9F6FFFCF5F0FFFAF0EAFFFBF2EDFFFDF9
+          F6FFFDFAF7FFFBF1EBFFF8E9DFFEECD0BDFBC9895EECB5693563BC6B3671BC6B
+          3690BC6B36CCBC6B36EEBC6B36FABB6B36FEBB6B36FFBB6A36FFBB6A36FFBC6C
+          39FFBD6E3BFFBB6D3AFFBB6B38EFBB703ECBB6693554FFFFFF00
+        }
       end
       object CloseMenuItem: TMenuItem
         Action = CloseAction
+        Bitmap.Data = {
+          36040000424D3604000000000000360000002800000010000000100000000100
+          2000000000000004000064000000640000000000000000000000595D5B00686B
+          69FF545856FF555957FF565A58FF565A58FF565A58FF565A58FF575B59FF575B
+          59FF575B59FF575B59FF575B59FF565A58FF5D615F86FFFFFF01535755FFC3C3
+          C3FF979898FF909392FFBBC1BEFFC1C6C3FFC3C8C6FFC3C9C6FFC4C9C6FFC4C9
+          C6FFC4C9C6FFC4C9C6FFC4C9C6FFC1C7C5FF5F6361FFFFFFFF05535755FFBEBE
+          BEFFABABABFFAFAFAFFF858685FF8B8F8DFFC5C9C7FFD2D6D4FFD5D9D7FFD6DA
+          D8FFD7DBD9FF8688C5FF4345B6FFD4D8D6FF717573FFFFFFFF0F535755FFBEBE
+          BEFFAAAAAAFFA9A9A9FFA1A1A1FF999999FF6F6F6FFF888A89FFD0D2D0FFE3E5
+          E4FF6B6CC4FF1111ACFF0C0CA9FFE4E6E5FF868887FFFFFFFF19535755FFBEBE
+          BEFFAAAAAAFFA5A5A5FF9D9D9DFF959595FF8F8F8FFF828282FF5E5F64FF4849
+          BBFF1B1BB5FF3535D3FF0404A6FF1E1EB0FF1314A5FF0B0BAAC8535755FFBEBE
+          BEFFAAAAAAFFA3A3A3FF9A9A9AFF929292FF898989FF797986FF2425ACFF2424
+          BCFF3838D6FF4141D9FF3A3AD4FF3C3CD2FF3D3DD2FF0000A5FD535755FFBEBE
+          BEFFA9A9A9FFA1A1A1FF989898FF8F8F8FFF73738BFF0E0EA2FF2D2DC4FF3636
+          D7FF0808CEFF0C0CCEFF0C0CCEFF0E0ECFFF5151DCFF0101A5FC535755FFBEBE
+          BEFFA7A7A7FF9E9E9EFF969696FF8D8D8DFF1616A1FF3636C5FF5656DDFF2D2D
+          D5FF2525D3FF1A1AD1FF1010CFFF1B1BD2FF6E6EE2FF0404A6FC535755FFBEBE
+          BEFFA4A4A4FF9C9C9CFF939393FF8B8B8BFF64648AFF1111A6FF5E5ED5FF6969
+          E1FF4848DBFF4A4ADBFF4C4CDBFF4D4DDBFF8D8DE8FF0303A6FC535755FFBEBE
+          BEFFA2A2A2FF9A9A9AFF919191FF888888FF808080FF6A6A7EFF2121B0FF6565
+          D2FF8888E7FF8E8EE8FF9595EAFF9696EAFF9A9AEBFF0101A5FC535755FFBDBD
+          BDFFA0A0A0FF979797FF8F8F8FFF868686FF7E7E7EFF767676FFE1E3ECFF3C3C
+          B9FF6161CDFFA7A7ECFF3030BCFF2828B7FF2122B1FF0101A5F8535755FFBBBB
+          BBFF9D9D9DFF949494FF898989FF7F7F7FFF767676FF707070FFEEF0F0FFEFF1
+          F3FF6565C7FF5151C4FF1515ACFFD3D4EDFF8889A2FF9696DA3A535755FFBABA
+          BAFF959595FF898989FF7E7E7EFF757575FF6E6E6EFF686868FFEEEFEFFFF2F4
+          F4FFF9F9F9FF9292D7FF3E3EBCFFFAFAFAFFA1A3A2FFFFFFFF26535755FFADAD
+          ADFF8C8C8CFF7F7F7FFF757575FF6C6C6CFF646464FF606060FFEDEFEFFFF2F3
+          F3FFF7F8F8FFFAFBFBFFFBFBFBFFF9F9F9FF989B9AFFFFFFFF22535755FFA6A6
+          A6FF858585FF797979FF6E6E6EFF656565FF5D5D5DFF595959FFEDEFEFFFEFF1
+          F1FFF3F4F4FFF5F6F6FFF5F6F6FFECEEEDFF7D817FFFFFFFFF15595D5B005357
+          55FF535755FF535755FF535755FF535755FF535755FF535755FF545856FF5A5E
+          5CFF626564FF666968FF676A68FF636765FF6B6E6D8CFFFFFF04
+        }
       end
       object MenuItem4: TMenuItem
         Caption = '-'
       end
       object ExitMenuItem: TMenuItem
         Action = ExitAction
+        Bitmap.Data = {
+          36040000424D3604000000000000360000002800000010000000100000000100
+          2000000000000004000064000000640000000000000000000000FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF001D63
+          9B1619609839145D9562105A92880D5890A4135C92FC0C578FED999999FF7171
+          71FF545454FF515151FF4F4F4FFF4C4C4CFF4A4A4AFF474747FF454545FF2567
+          9DFF3274A8FF3D7CAFFF4784B5FF4E8ABAFF3E7EADFF0C578FEAFFFFFF00FFFF
+          FF00585858FFA2A2A2FFA2A2A2FFA3A3A3FFA4A4A4FFA4A4A4FFA5A5A5FF2F6F
+          A5FF78ABD2FF78ABD3FF73A7D1FF69A0CDFF407FAEFF0F5991EAFFFFFF00FFFF
+          FF005C5C5CFFA1A1A1FF3C7340FFA0A1A1FFA3A3A3FFA3A3A3FFA4A4A4FF3674
+          AAFF7DAFD4FF5B9AC9FF5495C7FF5896C8FF4180AEFF135C94EAFFFFFF00FFFF
+          FF00606060FFA0A0A0FF3D7641FF367139FFA2A2A2FFA2A2A2FFA3A3A3FF3D79
+          B0FF82B3D7FF629FCCFF5A9AC9FF5E9BCAFF4381AFFF196098EA37823EFF347E
+          3BFF317937FF2E7534FF499150FF468F4CFF39733DFFA1A1A1FFA2A2A2FF457E
+          B4FF88B7D9FF67A3CFFF619ECCFF639FCCFF4583B1FF1F649CEA3B8742FF89CB
+          92FF84C88DFF80C688FF7BC383FF77C17FFF478F4DFF3B743FFFA1A1A1FF4C84
+          BAFF8DBBDBFF6EA8D1FF66A6D1FF5FB4DFFF4785B1FF2569A1EA3E8B46FF8FCE
+          99FF7DC687FF78C381FF73C07CFF74C07CFF79C281FF49904FFF547F57FF5489
+          BFFF94BFDDFF75ADD4FF63B8E1FF4BD4FFFF428BB8FF2C6EA6EA41904AFF94D2
+          9FFF91D09AFF8DCD96FF89CB92FF84C88DFF519858FF417C46FF9F9F9FFF5A8E
+          C4FF98C3E0FF7CB3D7FF74AFD6FF5EC4EDFF4B88B3FF3473ABEA44944DFF4291
+          4BFF3F8D48FF3D8945FF5DA465FF5AA061FF45834BFF9E9E9EFF9E9E9EFF6092
+          C9FF9EC7E2FF83B8DAFF7DB4D7FF7EB3D7FF4F89B4FF3B79B1EAFFFFFF00FFFF
+          FF00777777FF9A9A9AFF3D8A45FF498A4FFF9C9C9CFF9D9D9DFF9D9D9DFF6696
+          CCFFA2CBE3FF89BDDCFF83B9DAFF84B9DAFF518BB5FF437EB6EAFFFFFF00FFFF
+          FF007A7A7AFF999999FF529159FF999A99FF9B9B9BFF9C9C9CFF9C9C9CFF6C9A
+          D0FFA7CEE5FF8FC1DFFF89BDDCFF8BBDDCFF538DB6FF4B84BCEAFFFFFF00FFFF
+          FF007D7D7DFF999999FF999999FF9A9A9AFF9A9A9AFF9B9B9BFF9B9B9BFF6F9D
+          D3FFAAD1E7FFABD1E7FF98C7E1FF91C2DEFF568FB7FF5289C1EAFFFFFF00FFFF
+          FF00808080FF7E7E7EFF7C7C7CFF7A7A7AFF777777FF757575FF727272FF719E
+          D4FF6F9ED6FF87B2DCFFABD3E8FFA9D0E6FF5890B8FF598EC6EAFFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00709ED6DB6D9CD4FF85B1DAFF5A91B9FF6093CBEAFFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF006D9CD4896A9AD2FB6697CFEE
+        }
       end
     end
     object HelpMenuItem: TMenuItem
       Caption = '&Help'
       object AboutMenuItem: TMenuItem
         Action = AboutAction
+        Bitmap.Data = {
+          36040000424D3604000000000000360000002800000010000000100000000100
+          2000000000000004000064000000640000000000000000000000FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00975435239453347D925234DB8A5034F3884F34F38950
+          35DB8950357D84503623FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF009F563453995534E6B28057FFD5B793FFDBC3A6FFDAC3A6FFD2B4
+          90FFAB7A52FF864F34E688503553FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00A76234539F5533F4CBA77DFFD8BB9FFFC39C77FFB68A62FFB48660FFBE96
+          72FFD1B397FFC5A377FF844F35F489503553FFFFFF00FFFFFF00FFFFFF00AF70
+          3522AB6935E5CFAA81FFDABCA2FFBE9166FFBA8C62FFB7895FFFB3845EFFB183
+          5DFFB0835CFFCDAA8DFFC6A579FF895034E589503522FFFFFF00FFFFFF00B878
+          357EBF915EFFE0C2A8FFC5966CFFC29169FFE1CBB8FFFEFDFCFFFFFFFEFFEADC
+          D0FFB4855EFFB3855EFFD4B599FFAE7B56FF8F51357EFFFFFF00FFFFFF00BC7E
+          35DBDBBC9CFFD5AD89FFC7986CFFC39569FFC19367FFEDDFD3FFFAF7F4FFBB8B
+          63FFB98A63FFB88A62FFC59D78FFD2B893FF905135DBFFFFFF00FFFFFF00BF7E
+          35F6E3C7AFFFD0A276FFC5996BFFC4976AFFC49669FFEEE0D4FFFBF7F4FFBF90
+          66FFBE8F65FFBE8F64FFBE9269FFDFC6AAFF925034F6FFFFFF00FFFFFF00C585
+          3BF6E4C9B0FFD0A37AFFCC9D71FFC79A6CFFC5986BFFFFFFFFFFFFFFFEFFC396
+          69FFC19468FFC29468FFC3986DFFDFC5ABFF955334F6FFFFFF00FFFFFF00CB8E
+          41DBE0BC9FFFDBB393FFCFA075FFCD9E72FFCB9C71FFDDBFA3FFDDBFA2FFC599
+          6BFFC5996BFFC4986BFFD1AB85FFD8BA97FF9E5635DBFFFFFF00FFFFFF00CE91
+          477ECD9C68FFE7CBB4FFD4A57AFFD0A077FFCF9E74FFFBF8F5FFFBF8F5FFCB9E
+          71FFCB9D71FFCDA177FFDFC0A5FFB98A5BFFA45C347EFFFFFF00FFFFFF00D293
+          4C22CE8E47E5D9B28CFFE6CAB3FFD6A97DFFD1A579FFE2C4A8FFE1C3A8FFD0A2
+          76FFD1A477FFDDBDA2FFD0AC85FFAB6635E5A9653522FFFFFF00FFFFFF00FFFF
+          FF00D4964D53CF8D47F4D9B28CFFE6CDB8FFE0BA9DFFD7AB85FFD6A982FFD9B3
+          91FFE1C2ABFFD4AE86FFB16B35F4B16F3553FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00D6974F53D19149E6D0A06AFFE0BFA0FFE3C5AEFFE3C5AEFFDFBC
+          9FFFC89762FFBD7D35E6BC7E3553FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00D8985223D4964D7DD2924CDBCD8C45F3CB8B41F3C98B
+          40DBC78B407DC5873D23FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00
+        }
       end
     end
   end
@@ -393,5 +610,12 @@ object Form1: TForm1
       ImageIndex = 4
       OnExecute = ExitActionExecute
     end
+  end
+  object MainOpenDialog: TOpenDialog
+    Title = 'Select Test Suite file'
+    DefaultExt = '.xml'
+    Filter = 'XML file|*.xml|All files|*.*'
+    left = 768
+    top = 40
   end
 end
