--- a/projects/license_updater/Main.lfm
+++ b/projects/license_updater/Main.lfm
@@ -1,77 +1,82 @@
 object LicenseChangerForm: TLicenseChangerForm
-  Left = 623
-  Top = 431
+  Left = 409
+  Height = 460
+  Top = 257
+  Width = 763
   BorderStyle = bsSingle
-  Caption = 'License Changer 2.0'
+  Caption = 'License Changer 2.1'
   ClientHeight = 460
   ClientWidth = 763
   Color = clBtnFace
-  Font.Charset = DEFAULT_CHARSET
   Font.Color = clWindowText
   Font.Height = -11
   Font.Name = 'MS Sans Serif'
-  Font.Style = []
+  OnActivate = FormActivate
   Position = poScreenCenter
-  PixelsPerInch = 96
+  LCLVersion = '1.6.0.4'
   object Label1: TLabel
     Left = 8
-    Top = 10
-    Width = 22
     Height = 13
+    Top = 10
+    Width = 25
     Caption = 'Path'
+    ParentColor = False
   end
   object Label2: TLabel
     Left = 8
-    Top = 96
-    Width = 86
     Height = 13
+    Top = 96
+    Width = 97
     Caption = 'New License Text'
+    ParentColor = False
   end
   object Label3: TLabel
     Left = 0
-    Top = 290
-    Width = 18
     Height = 13
+    Top = 290
+    Width = 20
     Caption = 'Log'
+    ParentColor = False
   end
   object Label4: TLabel
     Left = 8
-    Top = 42
-    Width = 18
     Height = 13
+    Top = 42
+    Width = 20
     Caption = 'Key'
+    ParentColor = False
   end
   object Label5: TLabel
     Left = 8
-    Top = 74
-    Width = 28
     Height = 13
+    Top = 74
+    Width = 33
     Caption = 'Name'
+    ParentColor = False
   end
   object PathEdit: TEdit
     Left = 48
-    Top = 8
-    Width = 433
-    Height = 21
+    Height = 23
     Hint = 'Root of source tree'
-    ReadOnly = True
+    Top = 8
+    Width = 480
     TabOrder = 0
   end
   object PathButton: TButton
-    Left = 492
+    Left = 536
+    Height = 25
     Top = 8
     Width = 25
-    Height = 25
     Caption = '...'
-    TabOrder = 1
     OnClick = PathButtonClick
+    TabOrder = 1
   end
   object ExtMemo: TMemo
-    Left = 544
-    Top = 8
-    Width = 217
+    Left = 568
     Height = 97
     Hint = 'Processed extensions'
+    Top = 8
+    Width = 193
     Lines.Strings = (
       '.c'
       '.cpp'
@@ -79,72 +84,79 @@ object LicenseChangerForm: TLicenseChangerForm
       '.hpp'
       '.s'
       '.dox'
-      '.ld')
+      '.ld'
+    )
     ScrollBars = ssVertical
     TabOrder = 2
   end
   object LicenseMemo: TMemo
     Left = 0
+    Height = 169
     Top = 112
     Width = 761
-    Height = 169
-    Font.Charset = DEFAULT_CHARSET
     Font.Color = clWindowText
     Font.Height = -11
     Font.Name = 'Courier New'
-    Font.Style = []
     ParentFont = False
     ScrollBars = ssVertical
     TabOrder = 3
     WordWrap = False
   end
   object GoButton: TButton
-    Left = 344
-    Top = 72
-    Width = 75
+    Left = 328
     Height = 25
     Hint = 'Start processing'
+    Top = 72
+    Width = 64
     Caption = 'Go'
     Default = True
-    Enabled = False
-    TabOrder = 4
     OnClick = GoButtonClick
+    TabOrder = 4
   end
   object LogMemo: TMemo
     Left = 0
+    Height = 153
     Top = 304
     Width = 761
-    Height = 153
     ReadOnly = True
     ScrollBars = ssVertical
     TabOrder = 5
   end
   object StopButton: TButton
-    Left = 440
-    Top = 72
-    Width = 75
+    Left = 408
     Height = 25
+    Top = 72
+    Width = 64
     Caption = 'Stop'
     Enabled = False
-    TabOrder = 6
     OnClick = StopButtonClick
+    TabOrder = 6
   end
   object KeyEdit: TEdit
     Left = 48
+    Height = 23
+    Hint = 'Change only if this string is found'
     Top = 40
     Width = 257
-    Height = 21
-    Hint = 'Change only if this string is found'
     TabOrder = 7
     Text = 'ChibiOS is free software'
   end
   object NameEdit: TEdit
     Left = 48
+    Height = 23
+    Hint = 'Change only if this string is found'
     Top = 72
     Width = 257
-    Height = 21
-    Hint = 'Change only if this string is found'
     TabOrder = 8
     Text = 'Giovanni Di Sirio'
+  end
+  object ClearButton: TButton
+    Left = 488
+    Height = 25
+    Top = 72
+    Width = 64
+    Caption = 'Clear'
+    OnClick = ClearButtonClick
+    TabOrder = 9
   end
 end
